--- a/src/app/search/search-results-list/hits-count/hits-count.component.scss
+++ b/src/app/search/search-results-list/hits-count/hits-count.component.scss
@@ -1,20 +1,25 @@
+:host {
+    display: inline-flex;
+    margin-top: -6px;
+}
+
 .icon-badge {
+    display: flex;
     margin-left: 2px;
 
     clr-icon {
         width: 18px;
         height: 18px;
-        margin-top: -6px;
         margin-right: 0;
         opacity: 0.6;
     }
 
     .badge {
         position: relative;
-        margin-left: -12px;
-        margin-bottom: -4px;
+        top: 10px;
+        left: -10px;
+        margin-right: -10px;
         height: 0.6rem;
         min-width: 0.6rem;
-        margin-right: 0;
     }
 }
