--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -1,9 +1,10 @@
-.setting-section-title {
-    font-size: 0.95em;
-    margin-bottom: 4px;
-    border-bottom: 1px solid #e7e7e7;
-    padding-bottom: 3px;
-    margin-top: 10px;
+clr-modal::ng-deep .modal-body-wrapper {
+    height: 300px;
+}
+
+clr-tabs::ng-deep > ul {
+    margin-top: 2px;
+    margin-bottom: 24px;
 }
 
 .setting-row {
