--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -12,6 +12,6 @@ clr-tabs::ng-deep > ul {
     margin-bottom: 4px;
 }
 
-.history-limit-input, .btn-clear-history {
+.control-no-margin {
     margin: 0;
 }
