--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -14,6 +14,7 @@ clr-tabs::ng-deep > ul {
 
 clr-input-container {
     margin-top: 8px;
+    margin-bottom: 4px;
 
     &.control-no-margin {
         margin: 0;
