--- a/src/app/shared/components/file-viewer/file-viewer.component.html
+++ b/src/app/shared/components/file-viewer/file-viewer.component.html
@@ -1,6 +1,14 @@
 <clr-modal [clrModalOpen]="modalOpen" (clrModalOpenChange)="close()" [clrModalSize]="'xl'" [clrModalStaticBackdrop]="false">
     <h3 class="modal-title">
         <app-path-text [path]="filename"></app-path-text>
+        <div class="file-viewer-menu">
+            <div class="btn-group btn-outline-primary btn-icon btn-sm">
+                <a target="_blank" [href]="openInGitLabUrl()" rel="noopener noreferrer" class="btn" >
+                    GitLab
+                    <clr-icon shape="pop-out"></clr-icon>
+                </a>
+            </div>
+        </div>
         <div class="jump-lines-icons" *ngIf="highlightedRanges.length > 0">
             <span class="jump-counter">{{jumpedToLineIndex + 1}} of {{highlightedRanges.length}}</span>
             <div class="btn-group btn-outline-primary btn-icon btn-sm">
